# DS776_DeepLearning

./: .gitignore
Homework/Homework_05/: Homework_05.ipynb
Homework/Homework_06/: Homework_06.ipynb  graphics_and_data_prep.py
Homework/Homework_07/: Homework_07.ipynb  Homework_07_USE_THIS_ONE.ipynb
Homework/Homework_08/: Homework_08.ipynb  llm_helpers.py
Homework/Homework_09/: Count_Words.ipynb  Evaluation.ipynb  Homework_09_Prompt_START_HERE.ipynb  Homework_09_Report.html  Homework_09_Report.ipynb
Homework/Homework_10/: Homework_10.ipynb
Homework/Homework_11/: Colab_Starter_Notebook.ipynb  DS776_Colab_Setup.ipynb  Homework_11.ipynb  Homework_11_Colab_Version.ipynb
Homework/Homework_12/: Homework_12.ipynb  Homework_12_Colab_Version.ipynb
Lessons/Course_Tools/: Install_and_Clean.ipynb  To_Do_List.ipynb  api_keys.env  cocalc.env  cocalc_compute_server.env  google_colab.env  local.env  paperspace.env
Lessons/Course_Tools/introdl/: Install_and_Clean.ipynb  pyproject.toml
Lessons/Course_Tools/introdl/src/introdl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Lessons/Course_Tools/introdl/src/introdl/nlp/: __init__.py  nlp.py
Lessons/Course_Tools/introdl/src/introdl/utils/: __init__.py  utils.py
Lessons/Lesson_01_Neural_Networks/: L01_0_Overview.ipynb  L01_1_Class_and_Lesson_Intro.ipynb  L01_2_Nonlinear_Regression_1D.ipynb
Lessons/Lesson_03_Better_Training/: L03_3_Augmentation_with_CIFAR10.ipynb
Lessons/Lesson_04_Better_Networks/: L04_1_Advanced_NN.ipynb
Lessons/Lesson_05_Transfer_Learning/: L05_1_Transfer_Learning.ipynb
Lessons/Lesson_06_Object_Detection/: L06_2_Detection.ipynb
Lessons/Lesson_07_Transformers_Intro/: L07_1_Getting_Started.ipynb  L07_2_NLP_Tasks.html  L07_2_NLP_Tasks.ipynb  L07_Canvas_Quiz_Questions.ipynb  L07_Other_APIs.ipynb  LLM_Prompter.ipynb
Lessons/Lesson_08_Text_Classification/: IT_Classifier.ipynb  L07_2_NLP_Tasks.html  L08_1_Text_Classification.ipynb
Lessons/Lesson_09_Transformer_Details/: L09_1_Tranformer_Encoder_Example.ipynb  Math_Sum_Tranformer.ipynb  head_view.js  viz_functions.py
Lessons/Lesson_10_Named_Entity_Recognition/: L10_1_Finetuning_and_LLMs_for_NER.ipynb  helpers.py
Lessons/Lesson_11_Text_Generation/: Chat_Comparison_Notebook.ipynb  L11_0_Overview.ipynb  L11_1_Text_Generation.ipynb  L11_1_Text_Generation_ColabReady.ipynb  L11_Llama3p2_QLORA_Finetune.ipynb  helpers.py
Lessons/Lesson_12_Summarization/: L12_1_Summarization (UPDATED_VIDEOS).ipynb  L12_1_Summarization.ipynb  helpers.py
Lessons/Lesson_13_Project/: L13_1_Project_Choice_and_Draft.ipynb
