[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "introdl"
version = "1.0"
description = "Introductory Deep Learning Package"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "accelerate",
    "bertviz",
    "bitsandbytes>=0.45.3",
    "datasets",
    "google-genai",
    "IPython",
    "ipywidgets",
    "ipycanvas",
    "kagglehub",
    "matplotlib",
    "numpy",
    "openai>=1.65.5",
    "pandas",
    "protobuf",
    "pyperclip",
    "scikit-learn",
    "scipy",
    "seaborn",
    "segmentation_models_pytorch",
    "timm",
    "torch",
    "torchinfo",
    "torchmetrics",
    "torchvision",
    "tqdm",
    "transformers>=4.40.9",
    "ultralytics"
]

[tool.setuptools]
package-dir = {"" = "src"}  # Tell setuptools where to find your packages
packages = {find = {where = ["src"]}}  # Use find directive for package discovery
